bug fix for "add new widget" - button --> changed z-index, bug fixes for sequences

--- a/simple2secure.web/src/styles.css
+++ b/simple2secure.web/src/styles.css
@@ -572,4 +572,5 @@ ngx-widget-grid{
 
 .btn-add-widget{
     max-width: 180px;
+	z-index: 25;
 }
